--- a/src/py/locale/fr/LC_MESSAGES/django.po
+++ b/src/py/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-05 18:21+0200\n"
+"POT-Creation-Date: 2020-01-12 15:23+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,83 +18,105 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: src/py/main/templates/main/__root.html:63
-msgid "Main Menu"
-msgstr "Menu principal"
-
-#: src/py/main/templates/main/__root.html:72
-msgid "Change Language"
-msgstr "Choisir la langue préférée"
-
-#: src/py/main/templates/main/__root.html:118
+#: src/py/bio/templates/bio/index.html:9
+#: src/py/main/templates/main/__root.html:151
 msgid "home/"
 msgstr "accueil/"
 
-#: src/py/main/templates/main/__root.html:120
+#: src/py/bio/templates/bio/index.html:9
+#: src/py/main/templates/main/__root.html:153
 msgid "Home"
 msgstr "Accueil"
 
-#: src/py/main/templates/main/__root.html:124
-#: src/py/main/templates/main/accueil.html:9
-#: src/py/main/templates/main/home.html:9
-#: src/py/main/templates/main/index.html:6
-#: src/py/main/templates/main/начало.html:7
-msgid "biography/"
-msgstr "biographie/"
-
-#: src/py/main/templates/main/__root.html:126
+#. Translators: Biography page title
+#: src/py/bio/templates/bio/index.html:11 src/py/bio/views.py:16
+#: src/py/main/templates/main/__root.html:159
 msgid "Biography"
 msgstr "Biographie"
 
-#: src/py/main/templates/main/__root.html:132
+#. Translators: About page big heading
+#: src/py/bio/templates/bio/index.html:16
+msgid "About Dimmu Saurus"
+msgstr "C'est quoi Dimmu Saurus?"
+
+#. Translators: Biography page description
+#: src/py/bio/views.py:18
+msgid "The story of Dimmu Saurus project"
+msgstr "L'histoire de Dimmu Saurus"
+
+#: src/py/main/templates/main/__root.html:96
+msgid "Main Menu"
+msgstr "Menu principal"
+
+#: src/py/main/templates/main/__root.html:105
+msgid "Change Language"
+msgstr "Choisir la langue préférée"
+
+#: src/py/main/templates/main/__root.html:157
+#: src/py/main/templates/main/index.html:6
+msgid "biography/"
+msgstr "biographie/"
+
+#: src/py/main/templates/main/__root.html:165
 msgid "Music"
 msgstr "Musique"
 
-#: src/py/main/templates/main/__root.html:156
-#: src/py/main/templates/main/accueil.html:9
-#: src/py/main/templates/main/home.html:9
+#: src/py/main/templates/main/__root.html:189
 #: src/py/main/templates/main/index.html:5
-#: src/py/main/templates/main/начало.html:7
 msgid "music/"
 msgstr "musique/"
 
-#: src/py/main/templates/main/__root.html:268
+#: src/py/main/templates/main/__root.html:301
 msgid "Follow"
 msgstr "Suivez"
 
-#: src/py/main/templates/main/__root.html:272
+#: src/py/main/templates/main/__root.html:305
 msgid "Dimmu Saurus Bandcamp page"
 msgstr "Dimmu Saurus sur Bandcamp"
 
-#: src/py/main/templates/main/__root.html:276
+#: src/py/main/templates/main/__root.html:309
 msgid "Dimmu Saurus on Facebook"
 msgstr "Page Facebook"
 
-#: src/py/main/templates/main/__root.html:280
+#: src/py/main/templates/main/__root.html:313
 msgid "Dimmu Saurus Youtube channel"
 msgstr "Chaîne Youtube"
 
-#: src/py/main/templates/main/index.html:10
+#: src/py/main/templates/main/index.html:8
 msgid "Welcome"
 msgstr "Bienvenus"
 
-#: src/py/main/templates/main/index.html:12
-msgid "Welcome the Black Blues Dimosaur's den (latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be."
-msgstr "Bienvenus à l'antre de Blues Dinosaure Noir (en latin: <i>Dimmu Saurus</i>). Dimmu Saurus est un projet de musique garage, dédié à la création de blues, metal et rock, sans règles ou restrictions."
+#: src/py/main/templates/main/index.html:11
+msgid ""
+"Welcome the Black Blues Dimosaur's den (latin: <i>Dimmu Saurus</i>). It is a "
+"garage project for blues, rock and metal music, without any rules or "
+"limitations. The way real music should be."
+msgstr ""
+"Bienvenus à l'antre de Blues Dinosaure Noir (en latin: <i>Dimmu Saurus</i>). "
+"Dimmu Saurus est un projet de musique garage, dédié à la création de blues, "
+"metal et rock, sans règles ou restrictions."
 
-#: src/py/main/templates/main/index.html:17
+#: src/py/main/templates/main/index.html:16
 #, python-format
-msgid "If you are a fan of this kind of music, then jump straight ahead to the <a href=\"/%(url_music)s\">discography</a> to hear a song. Or if you are interested in the project's background and how it came to be, read more <a href=\"/%(url_biography)s\">about Dimmu Saurus</a>."
-msgstr "Si vous trouvez cette idée intéressante allez écouter <a href=\"/%(url_music)s\">la discographie</a>. Ou peut-être vous êtes curieux qu'est-ce que c'est Dimmu Saurus? Alors, lisez sa <a href=\"/%(url_biography)s\">biographie</a>."
+msgid ""
+"If you are a fan of this kind of music, then jump straight ahead to the <a "
+"href=\"/%(url_music)s\">discography</a> to hear a song. Or if you are "
+"interested in the project's background and how it came to be, read more <a "
+"href=\"/%(url_biography)s\">about Dimmu Saurus</a>."
+msgstr ""
+"Si vous trouvez cette idée intéressante allez écouter <a href=\"/"
+"%(url_music)s\">la discographie</a>. Ou peut-être vous êtes curieux qu'est-"
+"ce que c'est Dimmu Saurus? Alors, lisez sa <a href=\"/%(url_biography)s"
+"\">biographie</a>."
 
-#: src/py/main/templates/main/index.html:24
+#: src/py/main/templates/main/index.html:22
 msgid "News"
 msgstr "Nouvelles"
 
-#: src/py/main/views.py:14
+#: src/py/main/views.py:13
 msgid "Home Page"
 msgstr "Accueil"
 
-#: src/py/main/views.py:15
+#: src/py/main/views.py:14
 msgid "Music from the garage... without rules or restrictions"
 msgstr "Musique garage... sans règles et sans restrictions"
