--- a/src/py/locale/bg/LC_MESSAGES/django.po
+++ b/src/py/locale/bg/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-12 15:23+0200\n"
+"POT-Creation-Date: 2020-01-12 16:22+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,6 +43,13 @@ msgstr "Що е то Димозавър?"
 #: src/py/bio/views.py:18
 msgid "The story of Dimmu Saurus project"
 msgstr "Основаване и история на проекта Димозавъръ (Dimmu Saurus)"
+
+#. Translators: 404 page text
+#: src/py/main/templates/404.html:9
+msgid ""
+"There is nothing to see here. Please continue browsing or go to <a href=\"/"
+"\">Home page</a>."
+msgstr "Тук няма нещо за гледане. Моля продължете напред или се върнете на <a href=\"/\">главната страница</a>."
 
 #: src/py/main/templates/main/__root.html:96
 msgid "Main Menu"
