--- a/src/py/locale/bg/LC_MESSAGES/django.po
+++ b/src/py/locale/bg/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-21 15:48+0200\n"
+"POT-Creation-Date: 2020-01-21 16:06+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -92,10 +92,6 @@ msgstr "музика/"
 msgid "All Albums"
 msgstr "Всички албуми"
 
-#: src/py/main/templates/main/__root.html:178 src/py/music/models.py:25
-msgid "music/albums/"
-msgstr "музика/албуми/"
-
 #: src/py/main/templates/main/__root.html:290
 msgid "Follow"
 msgstr "Последвай"
@@ -155,9 +151,21 @@ msgstr "Начална страница"
 msgid "Music from the garage... without rules or restrictions"
 msgstr "Музика от гаража... без ограничения и без правила"
 
+#: src/py/music/models.py:25
+msgid "music/albums/"
+msgstr "музика/албуми/"
+
 #: src/py/music/models.py:45
 msgid "music/songs/"
 msgstr "музика/песни/"
+
+#: src/py/music/models.py:48
+msgid "/lyrics/"
+msgstr "/текст/"
+
+#: src/py/music/models.py:51
+msgid "/download/"
+msgstr "/изтегли/"
 
 #: src/py/music/templates/music/discography.html:31
 msgid ""
@@ -195,15 +203,6 @@ msgstr "Подробности за песен"
 #: src/py/music/templates/music/song.html:37
 msgid "listen"
 msgstr "слушай"
-
-# Dynamic
-#: src/py/music/templates/music/song.html:43
-msgid "/lyrics/"
-msgstr "/текст/"
-
-#: src/py/music/templates/music/song.html:51
-msgid "/download/"
-msgstr "/изтегли/"
 
 #. Translators: DOWNLOAD button on song page.
 #: src/py/music/templates/music/song.html:53
