--- a/src/py/locale/fr/LC_MESSAGES/django.po
+++ b/src/py/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-21 16:06+0200\n"
+"POT-Creation-Date: 2020-01-22 23:08+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -114,7 +114,7 @@ msgstr "Bienvenus"
 
 #: src/py/main/templates/main/index.html:11
 msgid ""
-"Welcome the Black Blues Dimosaur's den (latin: <i>Dimmu Saurus</i>). It is a "
+"Welcome the Black Blues Dimosaur's den (Latin: <i>Dimmu Saurus</i>). It is a "
 "garage project for blues, rock and metal music, without any rules or "
 "limitations. The way real music should be."
 msgstr ""
