--- a/src/py/locale/fr/LC_MESSAGES/django.po
+++ b/src/py/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-01 20:16+0200\n"
+"POT-Creation-Date: 2020-02-02 12:28+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -111,6 +111,10 @@ msgstr "Page Facebook"
 #: src/py/main/templates/main/__root.html:263
 msgid "Dimmu Saurus Youtube channel"
 msgstr "Chaîne Youtube"
+
+#: src/py/main/templates/main/__root.html:288
+msgid "Loading..."
+msgstr "Chargement..."
 
 #: src/py/main/templates/main/index.html:8
 msgid "Welcome"
